@@ -16463,9 +16463,9 @@ test_default_job_env (const char *confdir, const char *logdir,
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 
-	TEST_EQ (line_count, 2);
-	TEST_STR_MATCH (output[0], "PATH=*");
-	TEST_STR_MATCH (output[1], "TERM=*");
+	TEST_GE (line_count, 2);
+	TEST_STR_ARRAY_CONTAINS (output, "PATH=*");
+	TEST_STR_ARRAY_CONTAINS (output, "TERM=*");
 	nih_free (output);
 
 	/*******************************************************************/
@@ -16475,9 +16475,9 @@ test_default_job_env (const char *confdir, const char *logdir,
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 
-	TEST_EQ (line_count, 2);
-	TEST_STR_MATCH (output[0], "PATH=*");
-	TEST_STR_MATCH (output[1], "TERM=*");
+	TEST_GE (line_count, 2);
+	TEST_STR_ARRAY_CONTAINS (output, "PATH=*");
+	TEST_STR_ARRAY_CONTAINS (output, "TERM=*");
 	nih_free (output);
 
 	/*******************************************************************/
@@ -16542,16 +16542,14 @@ test_default_job_env (const char *confdir, const char *logdir,
 
 	fi = fopen (logfile, "r");
 	TEST_NE_P (fi, NULL);
-	TEST_FILE_MATCH (fi, "PATH=*");
-	TEST_FILE_MATCH (fi, "TERM=*");
+	TEST_FILE_CONTAINS (fi, "PATH=*");
+	TEST_FILE_CONTAINS (fi, "TERM=*");
 
 	/* asterisk required to match '\r\n' */
-	TEST_FILE_MATCH (fi, "UPSTART_JOB=foo*");
-	TEST_FILE_MATCH (fi, "UPSTART_INSTANCE=*");
-	TEST_FILE_MATCH (fi, "UPSTART_SESSION=*");
-	TEST_FILE_END (fi);
+	TEST_FILE_CONTAINS (fi, "UPSTART_JOB=foo*");
+	TEST_FILE_CONTAINS (fi, "UPSTART_INSTANCE=*");
+	TEST_FILE_CONTAINS (fi, "UPSTART_SESSION=*");
 	fclose (fi);
-
 
 	DELETE_FILE (confdir, "foo.conf");
 	TEST_EQ (unlink (logfile), 0);
@@ -16729,6 +16727,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	cmd = nih_sprintf (NULL, "%s reset-env 2>&1", get_initctl ());
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
+	TEST_EQ (line_count, 0);
 	nih_free (output);
 
 	/* Ensure nothing changed */
@@ -16746,7 +16745,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			name, value);
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
 			name);
@@ -16767,6 +16766,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 	TEST_EQ (line_count, 1);
 	TEST_EQ_STR (output[0], "initctl: No such variable: foo");
+	nih_free (output);
 
 	/*******************************************************************/
 	TEST_FEATURE ("set-env in 'name=' form");
@@ -16777,6 +16777,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			name);
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
+	TEST_EQ (line_count, 0);
 	nih_free (output);
 
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
@@ -16802,6 +16803,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 	TEST_EQ (line_count, 1);
 	TEST_EQ_STR (output[0], "initctl: No such variable: foo");
+	nih_free (output);
 
 	/*******************************************************************/
 	TEST_FEATURE ("set-env in 'name' form");
@@ -16837,6 +16839,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 	TEST_EQ (line_count, 1);
 	TEST_EQ_STR (output[0], "initctl: No such variable: foo");
+	nih_free (output);
 
 	/*******************************************************************/
 	TEST_FEATURE ("set-env for already set variable");
@@ -16849,7 +16852,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			name, value);
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	/* check it */
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
@@ -16866,7 +16869,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			name, value);
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	/* check it again */
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
@@ -16889,6 +16892,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 	TEST_EQ (line_count, 1);
 	TEST_EQ_STR (output[0], "initctl: No such variable: foo");
+	nih_free (output);
 
 	/*******************************************************************/
 	TEST_FEATURE ("set-env --retain");
@@ -16901,7 +16905,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			name, value);
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	/* check it */
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
@@ -16917,7 +16921,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			get_initctl (), name, "HELLO");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	/* check that value did *NOT* change */
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
@@ -16939,6 +16943,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 	TEST_EQ (line_count, 1);
 	TEST_EQ_STR (output[0], "initctl: No such variable: foo");
+	nih_free (output);
 
 	/*******************************************************************/
 	TEST_FEATURE ("set-env with space within value and trailing tab");
@@ -16950,7 +16955,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			name, value);
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s get-env %s 2>&1", get_initctl (),
 			name);
@@ -16971,6 +16976,7 @@ test_modified_job_env (const char *confdir, const char *logdir,
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
 	TEST_EQ (line_count, 1);
 	TEST_EQ_STR (output[0], "initctl: No such variable: foo");
+	nih_free (output);
 
 	/*******************************************************************/
 	TEST_FEATURE ("list-env output order");
@@ -16981,19 +16987,19 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			"zygote", "cell");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s set-env %s='%s' 2>&1", get_initctl (),
 			"median", "middle");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s set-env %s='%s' 2>&1", get_initctl (),
 			"aardvark", "mammal");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s list-env 2>&1", get_initctl ());
 	TEST_NE_P (cmd, NULL);
@@ -17037,13 +17043,13 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			"aardvark", "mammal");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s set-env %s='%s' 2>&1", get_initctl (),
 			"zygote", "cell");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s list-env 2>&1", get_initctl ());
 	TEST_NE_P (cmd, NULL);
@@ -17067,25 +17073,26 @@ test_modified_job_env (const char *confdir, const char *logdir,
 			"aardvark", "mammal");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s set-env %s='%s' 2>&1", get_initctl (),
 			"FOO", "BAR");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	cmd = nih_sprintf (NULL, "%s set-env %s='%s' 2>&1", get_initctl (),
 			"_________", "_________");
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
-	nih_free (output);
+	TEST_EQ (line_count, 0);
 
 	CREATE_FILE (confdir, "modified-env.conf", "exec env");
 
 	cmd = nih_sprintf (NULL, "%s start modified-env 2>&1", get_initctl ());
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
+	TEST_EQ (line_count, 1);
 	nih_free (output);
 
 	logfile = NIH_MUST (nih_sprintf (NULL, "%s/%s",
@@ -17211,6 +17218,7 @@ test_global_and_local_job_env (const char *confdir, const char *logdir,
 	TEST_NE_P (cmd, NULL);
 
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
+	TEST_EQ (line_count, 1);
 	nih_free (output);
 
 	logfile = NIH_MUST (nih_sprintf (NULL, "%s/%s",
@@ -17254,6 +17262,7 @@ test_global_and_local_job_env (const char *confdir, const char *logdir,
 	cmd = nih_sprintf (NULL, "%s start foo 2>&1", get_initctl ());
 	TEST_NE_P (cmd, NULL);
 	RUN_COMMAND (NULL, cmd, &output, &line_count);
+	TEST_EQ (line_count, 1);
 	nih_free (output);
 
 	logfile = NIH_MUST (nih_sprintf (NULL, "%s/%s",
