@@ -1,3 +1,15 @@
+2013-05-31  James Hunt  <james.hunt@ubuntu.com>
+
+	* init/job_class.c: job_class_environment_init(): Copy inits environment
+	  to the default job class environment for user mode where appropriate.
+	  (LP: #1159895).
+	* init/job_process.c: job_process_run(): Don't copy inits environment
+	  into the job instances environment table as those values are now
+	  already in the table.
+	* util/tests/test_initctl.c: Updates for new behaviour (where
+	  'list-env' will now contain the entire environment of the init
+	  process, not just those variables explicitly set via set-env).
+
 2013-05-27  Marc Deslauriers  <marc.deslauriers@ubuntu.com>
 
 	* init/job.c: Don't check for user mode when trying to load an
